...
        <variable
            name="crt"
            type="com.tubespbp.petshop.ui.shoppingCart.model.Cart"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="?attr/colorAccent"
        android:orientation="horizontal">

...
            android:fontFamily="@font/raleway_medium"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/hargaRp"
            app:layout_constraintTop_toBottomOf="@+id/namaBarang" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tambahCart"
...
