...
                    android:textColor="?attr/colorAccent"
                    android:textSize="23sp"
                    android:theme="@style/OtherToolbarTheme" />
            </androidx.appcompat.widget.Toolbar>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_katalog"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
...
